--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
+SECRET_JWT_KEY=123
 MONGODB_URL=mongodb+srv://lhd4blue:B0Filxg8K7QhzWjU@chatapp.kr3wm6s.mongodb.net/?retryWrites=true&w=majority&appName=chatapp
